<resources>
    <string name="app_name">网恋奔现</string>
    <string name="app_version">1.0beta</string>
    <string name="b_message">登录</string>
    <string name="hint_mm">请输入密码</string>
    <string name="z_message">请输入账号</string>
    <string name="z_messahe">账号</string>
    <string name="m_message">密码</string>
    <string name="mm_message">密码</string>
    <string name="icon_message">图片</string>
</resources>